--- a/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.scss
+++ b/portfolio/src/components/pages/about/aboutMain/sectionProfessionalSkills/SectionProfessionalSkills.scss
@@ -1,5 +1,6 @@
 //Colors
-$bg-section: #306797;
+// $bg-section: #306797;
+$bg-section: rgba(48, 103, 151, 0.8);
 $bg-skills-container: rgba(16, 42, 65, 0.8);
 
 //Breakpoints
