--- a/portfolio/src/components/pages/portfolio/projects/projectContent/projectHeader/ProjectHeader.css
+++ b/portfolio/src/components/pages/portfolio/projects/projectContent/projectHeader/ProjectHeader.css
@@ -14,8 +14,15 @@
 
 .project-header .project-logo {
   width: 100px;
-  height: 100px;
-  float: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .project-header .project-logo img {
