--- a/portfolio/src/components/navigation/toggleButton/ToggleButton.css
+++ b/portfolio/src/components/navigation/toggleButton/ToggleButton.css
@@ -35,13 +35,13 @@
           transform: rotate(-42deg) translateY(0.1px);
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .toggle-btn {
     display: block;
   }
 }
 
-@media (max-width: 414px) {
+@media screen and (max-width: 414px) {
   .toggle-btn {
     margin: 15px 0;
   }
