--- a/portfolio/src/components/footer/Footer.css
+++ b/portfolio/src/components/footer/Footer.css
@@ -1,77 +1,13 @@
-#main-footer {
+#footer {
   width: 100%;
   height: auto;
-  background-color: #102a41;
+  background: #222222;
 }
 
-#main-footer .footer-logo {
+#footer .copyright {
   text-align: center;
-  padding: 1rem 0;
-}
-
-#main-footer .footer-logo img {
-  width: 4rem;
-  height: 4rem;
-}
-
-#main-footer .footer-grid-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
-  padding: 0 0 1rem;
-}
-
-#main-footer .copyright {
-  text-align: center;
-  color: #fff;
-  font-family: 'Oswald', sans-serif;
+  font-size: 0.8rem;
   padding: 0 0 0.5em;
-}
-
-@media screen and (min-width: 620px) and (max-width: 767px) {
-  #main-footer .footer-logo {
-    padding: 0.5rem 0;
-  }
-  #main-footer .footer-logo img {
-    width: 3.5rem;
-    height: 3.5rem;
-  }
-}
-
-@media screen and (min-width: 415px) and (max-width: 619px) {
-  #main-footer .footer-logo {
-    padding: 0.5rem 0;
-  }
-  #main-footer .footer-logo img {
-    width: 3rem;
-    height: 3rem;
-  }
-  #main-footer .footer-grid-container {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-    padding: 0;
-  }
-  #main-footer .copyright {
-    font-size: 0.8em;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  #main-footer .footer-logo {
-    padding: 0.5rem 0;
-  }
-  #main-footer .footer-logo img {
-    width: 3rem;
-    height: 3rem;
-  }
-  #main-footer .footer-grid-container {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-    padding: 0;
-  }
-  #main-footer .copyright {
-    font-size: 0.8em;
-  }
+  color: #fff;
 }
 /*# sourceMappingURL=Footer.css.map */
