--- a/portfolio/src/components/footer/footerContent/footerContact/FooterContact.css
+++ b/portfolio/src/components/footer/footerContent/footerContact/FooterContact.css
@@ -1,17 +1,16 @@
 .footer-contact-container .contact-info {
-  padding: 1rem 0 0;
   color: #fff;
   margin: 0 auto;
-  width: 250px;
-  font-family: 'Six Caps', sans-serif;
-  line-height: 1.7em;
+  max-width: 250px;
 }
 
 .footer-contact-container .contact-info .footer-title {
-  font-size: 1.1rem;
+  font-size: 1rem;
+  letter-spacing: 0.08rem;
 }
 
 .footer-contact-container .contact-info .footer-contact-link {
+  font-size: 0.9rem;
   color: #808080;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -25,17 +24,27 @@
   padding: 0.7em 0;
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 1024px) {
+  .footer-contact-container .contact-info .footer-contact-link:hover {
+    color: #808080;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .footer-contact-container .contact-info {
-    padding: 0.8em;
-    color: #fff;
-    margin: 0 auto;
-    width: 250px;
-    line-height: 1.1rem;
-    font-size: 0.8rem;
+    padding: 0;
   }
   .footer-contact-container .contact-info .footer-title {
-    font-size: 1rem;
+    font-size: 0.8rem;
+  }
+  .footer-contact-container .contact-info .footer-contact-link {
+    font-size: 0.7rem;
+  }
+}
+
+@media screen and (max-width: 539px) {
+  .footer-contact-container .contact-info {
+    padding: 0.3rem 0 0;
   }
 }
 /*# sourceMappingURL=FooterContact.css.map */
