--- a/portfolio/src/components/navigation/Nav.css
+++ b/portfolio/src/components/navigation/Nav.css
@@ -1,62 +1,29 @@
 .navigation {
   width: 100%;
   height: 5em;
-  background-color: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.4);
   position: fixed;
   -webkit-transition: 0.35s;
   transition: 0.35s;
   z-index: 1000;
 }
 
-.navigation .logo {
-  float: left;
-  margin-top: 8px;
-}
-
 .active-fixed-nav {
-  border-bottom: 2px solid #306797;
-  background-color: #102a41;
+  border-bottom: 2px solid #e9e9e9;
+  background: #222222;
   position: fixed;
 }
 
-@media screen and (min-width: 540px) and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .navigation {
-    background-color: #102a41;
+    background: #222222;
     border-bottom: none;
-  }
-  .navigation .toggle-btn {
-    display: block;
-  }
-  .navigation .logo {
-    margin-top: 8px;
   }
 }
 
-@media screen and (min-width: 415px) and (max-width: 539px) {
+@media screen and (max-width: 540px) {
   .navigation {
-    background-color: #102a41;
-    border-bottom: none;
     height: 3.5em;
-  }
-  .navigation .toggle-btn {
-    margin: 15px 0;
-  }
-  .navigation .logo {
-    margin-top: 4px;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  .navigation {
-    background-color: #102a41;
-    border-bottom: none;
-    height: 3.5em;
-  }
-  .navigation .toggle-btn {
-    margin: 15px 0;
-  }
-  .navigation .logo {
-    margin-top: 4px;
   }
 }
 /*# sourceMappingURL=Nav.css.map */
