--- a/portfolio/src/components/navigation/menu/Menu.css
+++ b/portfolio/src/components/navigation/menu/Menu.css
@@ -7,7 +7,7 @@
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
   .main-nav {
     width: 100%;
     height: 100%;
@@ -15,33 +15,27 @@
     left: -100%;
     top: 5em;
     z-index: 9999;
-    background-color: #102a41;
+    background: #222222;
     -webkit-transition: 0.5s;
     transition: 0.5s;
   }
   .main-nav .main-menu-container {
     position: absolute;
-    top: 50%;
+    top: 30%;
     left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -30%);
+            transform: translate(-50%, -30%);
     width: 100%;
   }
   .main-nav .mobile-social {
     display: block;
   }
-  .showNav {
+  .show-nav {
     left: 0;
   }
 }
 
-@media screen and (min-width: 415px) and (max-width: 539px) {
-  .main-nav {
-    top: 3.5em;
-  }
-}
-
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 540px) {
   .main-nav {
     top: 3.5em;
   }
