--- a/portfolio/src/components/navigation/menu/Menu.scss
+++ b/portfolio/src/components/navigation/menu/Menu.scss
@@ -1,12 +1,9 @@
 //Colors
-$link-color: #fff;
-$link-hover-background: #0aabc5;
+$main-menu-bg: #222222;
 
 //Breakpoints
-
-$breakpoint-iPad: 768px;
-$breakpoint-middle-small: 539px;
-$breakpoint-phone: 414px;
+$breakpoint-middle-large: 960px;
+$breakpoint-middle-small: 540px;
 
 .main-nav {
     float: right;
@@ -17,9 +14,9 @@ $breakpoint-phone: 414px;
     }
 }
 
-//Breakpoint iPad
+//Breakpoint Middle-Large
 
-@media screen and (max-width: $breakpoint-iPad) {
+@media screen and (max-width: $breakpoint-middle-large) {
     .main-nav {
         width: 100%;
         height: 100%;
@@ -27,14 +24,14 @@ $breakpoint-phone: 414px;
         left: -100%;
         top: 5em;
         z-index: 9999;
-        background-color: #102a41;
+        background: $main-menu-bg;
         transition: 0.5s;
 
         .main-menu-container {
             position: absolute;
-            top: 50%;
+            top: 30%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -30%);
             width: 100%;
         }
 
@@ -43,22 +40,14 @@ $breakpoint-phone: 414px;
         }
     }
 
-    .showNav {
+    .show-nav {
         left: 0;
     }
 }
 
-//Breakpoint Middle-Small to Phone
 
-@media screen and (min-width: 415px) and (max-width: $breakpoint-middle-small) {
-    .main-nav {
-        top: 3.5em;
-    }
-}
-
-//Breakpoint Phone
-
-@media screen and (max-width: $breakpoint-phone) {
+//Breakpoint Middle-Small
+@media screen and(max-width: $breakpoint-middle-small) {
     .main-nav {
         top: 3.5em;
     }
