--- a/portfolio/src/components/navigation/menu/mainMenuLink/MainMenuLink.css
+++ b/portfolio/src/components/navigation/menu/mainMenuLink/MainMenuLink.css
@@ -1,179 +1,139 @@
 .main-list {
   display: inline-block;
+  width: 120px;
+  height: 30px;
 }
 
 .main-list .main-link {
   text-transform: uppercase;
   letter-spacing: 0.11rem;
-  font-family: 'Anton', sans-serif;
+  font-weight: 800;
+  font-size: 0.75rem;
   position: relative;
-  width: 120px;
-  height: 40px;
   display: block;
   text-align: center;
-  line-height: 40px;
+  line-height: 30px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #2e2d2d;
 }
 
-.main-list .main-link .main-link-hover {
+.main-list .main-link .hover-effect {
   position: absolute;
   width: 25%;
   height: 100%;
-  background: #2e2d2d;
+  background: #222222;
   z-index: -1;
   -webkit-transform-origin: top;
           transform-origin: top;
   -webkit-transform: scaleY(0);
           transform: scaleY(0);
-  -webkit-transition: -webkit-transform .5s;
-  transition: -webkit-transform .5s;
-  transition: transform .5s;
-  transition: transform .5s, -webkit-transform .5s;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
-.main-list .main-link .main-link-hover:nth-child(1) {
+.main-list .main-link .hover-effect:nth-child(1) {
   left: 0;
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
 }
 
-.main-list .main-link .main-link-hover:nth-child(2) {
+.main-list .main-link .hover-effect:nth-child(2) {
   left: 25%;
   -webkit-transition-delay: 0.15s;
           transition-delay: 0.15s;
 }
 
-.main-list .main-link .main-link-hover:nth-child(3) {
+.main-list .main-link .hover-effect:nth-child(3) {
   left: 50%;
-  -webkit-transition-delay: 0.30s;
-          transition-delay: 0.30s;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
 }
 
-.main-list .main-link .main-link-hover:nth-child(4) {
+.main-list .main-link .hover-effect:nth-child(4) {
   left: 75%;
   -webkit-transition-delay: 0.45s;
           transition-delay: 0.45s;
 }
 
-.main-list .main-link .fixed-main-link-hover {
-  background: #0aabc5;
-}
-
 .main-list .main-link:hover {
-  color: #fff;
+  color: #ffffff;
 }
 
-.main-list .main-link:hover .main-link-hover {
+.main-list .main-link:hover .hover-effect {
   -webkit-transform: scaleY(1);
           transform: scaleY(1);
   -webkit-transform-origin: bottom;
           transform-origin: bottom;
 }
 
-.main-list .fixed-main-link-color {
-  color: #fff;
+.main-list .main-link .fixed-hover-effect {
+  background: #ffffff;
 }
 
-.active-main-link {
-  border: 1px solid #2e2d2d;
-  -webkit-box-shadow: 3px 2px #3d3f3f;
-          box-shadow: 3px 2px #3d3f3f;
+.main-list .fixed-main-link {
+  color: #ffffff;
 }
 
-.fixed-active-main-link {
-  border: 1px solid #0aabc5;
-  -webkit-box-shadow: 3px 2px #9DDDE7;
-          box-shadow: 3px 2px #9DDDE7;
+.main-list .fixed-main-link:hover {
+  color: #222222;
+}
+
+.main-list .active-main-link {
+  border: 1px solid #222222;
+  -webkit-box-shadow: 3px 2px rgba(34, 34, 34, 0.5);
+          box-shadow: 3px 2px rgba(34, 34, 34, 0.5);
+}
+
+.main-list .fixed-active-main-link {
+  border: 1px solid #ffffff;
+  -webkit-box-shadow: 3px 2px rgba(255, 255, 255, 0.5);
+          box-shadow: 3px 2px rgba(255, 255, 255, 0.5);
 }
 
 @media screen and (max-width: 1024px) {
-  .main-list .main-link {
-    color: #2e2d2d;
-  }
-  .main-list .main-link .main-link-hover {
+  .main-list .main-link .hover-effect {
     display: none;
   }
   .main-list .main-link:hover {
-    color: #2e2d2d;
+    color: #222222;
   }
-  .main-list .fixed-main-link-color {
-    color: #fff;
+  .main-list .fixed-main-link {
+    color: #ffffff;
   }
-  .main-list .fixed-main-link-color:hover {
-    color: #fff;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .main-list {
-    display: block;
-    border-bottom: 1px solid #fff;
-    height: 80px;
-  }
-  .main-list:nth-child(1) {
-    border-top: 1px solid #fff;
-  }
-  .main-list .main-link {
-    height: 100%;
-    line-height: 80px;
-    width: 100%;
-    text-align: center;
-    font-size: 1.3rem;
-    color: #fff;
-  }
-  .main-list .main-link .main-link-hover {
-    -webkit-transform-origin: left;
-            transform-origin: left;
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
-    background: #0aabc5;
-  }
-  .main-list .main-link:hover {
-    color: #fff;
-  }
-  .main-list .main-link:hover .main-link-hover {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
-    -webkit-transform-origin: right;
-            transform-origin: right;
-  }
-  .active-main-link {
-    background-color: #0aabc5;
-    border: none;
-    -webkit-box-shadow: none;
-            box-shadow: none;
+  .main-list .fixed-main-link:hover {
+    color: #ffffff;
   }
 }
 
-@media screen and (max-width: 414px) {
+@media screen and (max-width: 960px) {
   .main-list {
     display: block;
-    height: 60px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #ffffff;
+    width: 100%;
   }
   .main-list:nth-child(1) {
-    border-top: 1px solid #fff;
+    border-top: 1px solid #ffffff;
   }
   .main-list .main-link {
-    height: 100%;
-    line-height: 60px;
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    color: #fff;
+    font-weight: 500;
+    color: #ffffff;
   }
   .main-list .main-link:hover {
-    color: #fff;
+    color: #ffffff;
   }
-  .active-main-link {
-    background-color: #0aabc5;
+  .main-list .active-main-link {
+    background: #ffffff;
     border: none;
     -webkit-box-shadow: none;
             box-shadow: none;
+    color: #222222;
+  }
+  .main-list .active-main-link:hover {
+    color: #222222;
   }
 }
 /*# sourceMappingURL=MainMenuLink.css.map */
