--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -14,6 +14,8 @@ body {
   width: 100%;
   height: auto;
   background: #f7f7f9;
+  font-family: 'Oswald', sans-serif;
+  color: #2e2d2d;
 }
 
 body ul {
@@ -22,10 +24,11 @@ body ul {
 
 body a {
   text-decoration: none;
+  color: #2e2d2d;
 }
 
 .wrapper {
-  max-width: 1050px;
+  max-width: 1150px;
   margin: 0 auto;
 }
 
@@ -33,6 +36,14 @@ body a {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.middle-positioning {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: 1280px) {
