--- a/portfolio/src/index.scss
+++ b/portfolio/src/index.scss
@@ -1,9 +1,8 @@
 //Colors
-
 $body-bg: #f7f7f9;
+$text-color: #2e2d2d;
 
 //Breakpoints
-
 $breakpoint-browser: 1280px;
 
 *,
@@ -21,6 +20,8 @@ body {
     width: 100%;
     height: auto;
     background: $body-bg;
+    font-family: 'Oswald', sans-serif;
+    color: $text-color;
 
     ul {
         list-style: none;
@@ -28,11 +29,12 @@ body {
 
     a {
         text-decoration: none;
+        color: $text-color;
     }
 }
 
 .wrapper {
-    max-width: 1050px;
+    max-width: 1150px;
     margin: 0 auto;
 }
 
@@ -40,6 +42,13 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.middle-positioning {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (max-width: $breakpoint-browser) {
